<resources>
    <string name="app_name">BiblioLoan_App</string>
    <string name="AppTitle">BiblioLoam</string>
    <string name="AppTtile2">BiblioLoan</string>
    <string name="LoginLabel">Login</string>
    <string name="passLabel">Senha:</string>
    <string name="loginLabel">Login:</string>
    <string name="Login">Login:</string>
    <string name="Apptitle">BiblioLoan</string>
    <string name="forgetLabel">Esqueci a senha</string>
    <string name="loginBt">Entrar</string>
    <string name="new_user">Novo Usuário</string>
    <string name="about">Sobre</string>
    <string name="backBt">Voltar</string>
    <string name="createBt">Criar</string>
    <string name="listTitles">Listar Títulos disponíveis</string>
    <string name="register">Registro</string>
    <string name="returnrr">Voltar</string>
    <string name="editionLbl">Edição</string>
    <string name="LoanBt">Emprestar</string>
    <string name="reconfigPass">Reconfigure sua senha:</string>
    <string name="newPass">Nova Senha:</string>
    <string name="confirmPass" />
    <string name="confirmPasss">Confirme sua senha:</string>
    <string name="pass">senha</string>
    <string name="newpas">nova senha</string>
    <string name="update" />
    <string name="updatee">Atualizar</string>
    <string name="makeALoan">Realize algum empréstimo</string>
</resources>
