<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tp2.pp.ufam.biblioloan_app.PassReconfigActivity">

    <TextView
        android:id="@+id/TitleActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/reconfigPass"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/Login"
        android:textColor="@android:color/holo_blue_bright"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="87dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/passLabel"
        android:textColor="@android:color/holo_blue_bright"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="144dp" />
</android.support.constraint.ConstraintLayout>
